Closed
Bug 1582646
Opened 6 years ago
Closed 6 years ago
Crash in [@ mozilla::net::WebrtcTCPSocket::InvokeOnConnected]
Categories
(Core :: WebRTC: Networking, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla71
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox69 | --- | unaffected |
firefox70 | --- | unaffected |
firefox71 | + | fixed |
People
(Reporter: pascalc, Assigned: bwc)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-0f023cf2-bd78-4b75-87fd-80e630190919.
Top 10 frames of crashing thread:
0 xul.dll void mozilla::net::WebrtcTCPSocket::InvokeOnConnected media/mtransport/ipc/WebrtcTCPSocket.cpp:449
1 xul.dll nsresult mozilla::net::WebrtcTCPSocket::OpenWithoutHttpProxy media/mtransport/ipc/WebrtcTCPSocket.cpp:324
2 xul.dll nsresult mozilla::net::WebrtcTCPSocket::OnProxyAvailable media/mtransport/ipc/WebrtcTCPSocket.cpp
3 xul.dll static nsresult mozilla::net::nsAsyncResolveRequest::DoCallback::<unnamed-tag>::operator netwerk/base/nsProtocolProxyService.cpp:366
4 xul.dll xul.dll@0xac6995
5 xul.dll nsresult mozilla::net::nsAsyncResolveRequest::AsyncApplyFilters::Finish netwerk/base/nsProtocolProxyService.cpp:599
6 xul.dll nsresult mozilla::net::nsAsyncResolveRequest::AsyncApplyFilters::ProcessNextFilter netwerk/base/nsProtocolProxyService.cpp:509
7 xul.dll nsresult mozilla::net::nsAsyncResolveRequest::AsyncApplyFilters::AsyncProcess netwerk/base/nsProtocolProxyService.cpp:485
8 xul.dll void mozilla::net::nsAsyncResolveRequest::DoCallback netwerk/base/nsProtocolProxyService.cpp:375
9 xul.dll nsresult mozilla::net::ExecuteCallback::Run netwerk/base/nsPACMan.cpp:119
Reporter | ||
Comment 1•6 years ago
|
||
Calixte, any idea what patch could have regressed this? Thanks
Comment 2•6 years ago
|
||
These started in the 20190918215055 nightly build, on windows.
status-firefox69:
--- → unaffected
status-firefox70:
--- → unaffected
status-firefox-esr60:
--- → unaffected
status-firefox-esr68:
--- → unaffected
Keywords: regression
Version: unspecified → 71 Branch
Updated•6 years ago
|
Priority: -- → P2
Assignee | ||
Comment 3•6 years ago
|
||
Looks like a nullptr crash, I'll look at it.
Assignee: nobody → docfaraday
Flags: needinfo?(cdenizet)
Assignee | ||
Comment 5•6 years ago
|
||
Assignee | ||
Comment 6•6 years ago
|
||
Also, since OnProxyAvailable always happens on main regardless of the target we
set, don't bother setting the target.
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/81ab3774184b
Cancel proxy lookup when socket closes. r=mjf
Comment 8•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•