Bug 1582646: Cancel proxy lookup when socket closes. r=mjf

Also, since OnProxyAvailable always happens on main regardless of the target we
set, don't bother setting the target.

Differential Revision: https://phabricator.services.mozilla.com/D46603